Fix swal conformation, it was being displayed behind the department switch form. Removed meteor swal package, start using npm version (2.x).

--- a/packages/rocketchat-livechat/.app/client/stylesheets/main.less
+++ b/packages/rocketchat-livechat/.app/client/stylesheets/main.less
@@ -804,6 +804,10 @@ input:focus {
 	border-top-left-radius: inherit;
 }
 
+.swal2-container {
+	z-index: 10000 !important;
+}
+
 .video-call {
 	position: fixed;
 	top: @header-min-height;
